[gd_scene load_steps=3 format=3 uid="uid://87v2fth42iss"]

[ext_resource type="Script" uid="uid://cfujhoi50vhxo" path="res://code/mainmenu_code/options_menu.gd" id="1_ijpji"]
[ext_resource type="FontFile" uid="uid://13mkxtc7s5sw" path="res://assets/font/Wild Words Roman.ttf" id="1_liyum"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ijpji")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuBar" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -896.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MenuBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.5
offset_top = -38.0
offset_right = 41.5
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="Volume" type="HSlider" parent="Panel/MenuBar/VBoxContainer"]
layout_mode = 2

[node name="Mute" type="CheckBox" parent="Panel/MenuBar/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_liyum")
text = "MUTE"

[node name="ResolutionButton" type="OptionButton" parent="Panel/MenuBar/VBoxContainer"]
layout_mode = 2
selected = 2
item_count = 3
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2

[node name="BackButton" type="Button" parent="Panel/MenuBar/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_liyum")
text = "GO BACK"

[node name="ScreenBar" type="Panel" parent="Panel"]
modulate = Color(1, 1, 1, 0.36862746)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 384.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/ScreenBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.0
offset_top = -11.5
offset_right = 135.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "GAME TITLE/ICON/LOGO, ETC HERE"

[connection signal="value_changed" from="Panel/MenuBar/VBoxContainer/Volume" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="Panel/MenuBar/VBoxContainer/Mute" to="." method="_on_mute_toggled"]
[connection signal="item_selected" from="Panel/MenuBar/VBoxContainer/ResolutionButton" to="." method="_on_resolution_button_item_selected"]
[connection signal="pressed" from="Panel/MenuBar/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
